...
                  />
                </>
              )}

              <View style={styles.inputRow}>
                <TextInput
                  testID="weight-tracker-input"
                  style={[styles.input, { flex: 1 }]}
                  placeholder={
                    isImperial ? "Weight (lb)" : "Weight (kg)"
                  }
                  placeholderTextColor={colors.textTertiary}
                  keyboardType="decimal-pad"
...
